--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,13 +17,10 @@ jobs:
       - name: setup
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
-
-      - name: build
-        run: go build ./...
+          go-version: 1.20
 
       - name: unit test
-        run: go test -race -gcflags=all=-l -coverprofile=coverage.out ./...
+        run: go test -race -gcflags="all=-l -N" -coverprofile=coverage.out ./...
 
       - name: install goveralls
         run: go install github.com/mattn/goveralls@latest
